--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -27,4 +27,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\Report\Strategies\" />
+    </ItemGroup>
+
 </Project>
