Add debug mode logging and ensure database existence
Added Spectre.Console for debug mode logging in `DatabaseManager`. Improved `ConnectionProvider` to check and create the database if it doesn't exist. Additionally, updated `appsettings.json` by removing the initial catalog from the connection string.

--- a/Flashcards/appsettings.json
+++ b/Flashcards/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=Flashcards; Integrated Security=true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Integrated Security=true;"
   }
 }
