Add database name configuration support
Introduced a new configuration setting to specify the database name in appsettings.json. Updated ConnectionProvider to use the configured database name, ensuring alignment and flexibility for different database instances. Modified IConfigurationProvider interface and its implementation to retrieve this new setting.

--- a/Flashcards/appsettings.json
+++ b/Flashcards/appsettings.json
@@ -1,5 +1,8 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Integrated Security=true;"
+  },
+  "DatabaseName": {
+    "DefaultDbName" : "Flashcards"
   }
 }
